feat: etape 3 en cours cli fonctionne otoujours au moins partiellement